# myccmetrics

./: .clever.json  .gitignore  README.md
backend-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend-server/migrations/: 001_initial.sql
backend-server/src/: config.rs  error.rs  main.rs  state.rs
backend-server/src/api/: cc_client.rs  mod.rs  routes.rs
backend-server/src/auth/: authz.rs  encryption.rs  middleware.rs  mod.rs  oauth.rs  routes.rs
backend-server/src/db/: mod.rs  users.rs  warp10_tokens.rs
backend-server/src/metrics/: mod.rs  routes.rs  templates.rs  warp10_client.rs
docs/: SECURITY.md  clever-cloud-metrics.md  user-guide.md
frontend-server/: next.config.ts  package-lock.json  package.json
frontend-server/src/app/: globals.css  layout.tsx  page.tsx
frontend-server/src/app/dashboard/: layout.tsx  page.tsx
frontend-server/src/app/dashboard/[orgId]/: page.tsx
frontend-server/src/app/dashboard/[orgId]/[appId]/: loading.tsx  page.tsx
frontend-server/src/app/dashboard/docs/: page.tsx
frontend-server/src/components/charts/: chart-theme.ts  chart-wrapper.tsx  cpu-chart.tsx  disk-chart.tsx  memory-chart.tsx  network-chart.tsx
frontend-server/src/components/layout/: sidebar.tsx  topbar.tsx
frontend-server/src/lib/: api.ts  formatters.ts  types.ts
frontend-server/src/lib/hooks/: use-addons.ts  use-applications.ts  use-metrics.ts  use-organisations.ts  use-user.ts
